--- a/OKRPerformanceManagement.Web/Views/Manager/Index.cshtml
+++ b/OKRPerformanceManagement.Web/Views/Manager/Index.cshtml
@@ -15,7 +15,7 @@
                     <a href="@Url.Action("PendingReviews")" class="btn btn-warning">
                         <i class="fas fa-clipboard-check"></i> Pending Reviews
                     </a>
-                    <a href="@Url.Action("PendingReviews")" class="btn btn-info">
+                    <a href="@Url.Action("MyReviews")" class="btn btn-info">
                         <i class="fas fa-eye"></i> My Reviews
                     </a>
                 </div>
