--- a/OKRPerformanceManagement.Web/Views/Employee/ReviewDetails.cshtml
+++ b/OKRPerformanceManagement.Web/Views/Employee/ReviewDetails.cshtml
@@ -11,6 +11,9 @@
             <div class="d-flex justify-content-between align-items-center mb-4">
                 <h1 class="h3 mb-0 text-gray-800">Review Details</h1>
                 <div>
+                    <a href="@Url.Action("MyActiveReviews")" class="btn btn-outline-primary me-2">
+                        <i class="fas fa-list"></i> My Active Reviews
+                    </a>
                     <a href="@Url.Action("MyOKRs")" class="btn btn-secondary">
                         <i class="fas fa-arrow-left"></i> Back to My OKRs
                     </a>
