--- a/OKRPerformanceManagement.Web/Views/Manager/PendingReviews.cshtml
+++ b/OKRPerformanceManagement.Web/Views/Manager/PendingReviews.cshtml
@@ -51,14 +51,11 @@
                             }
 
                             <div class="mt-3">
-                                <a href="@Url.Action("ReviewDetails", new { id = review.Id })" class="btn btn-primary btn-sm">
-                                    <i class="fas fa-eye"></i> Review Details
+                                <a href="@Url.Action("ReviewDetails", new { id = review.Id })" class="btn btn-primary btn-sm me-2">
+                                    <i class="fas fa-eye"></i> View Details
                                 </a>
                                 <a href="@Url.Action("ManagerReview", new { id = review.Id })" class="btn btn-success btn-sm">
                                     <i class="fas fa-edit"></i> Add Manager Review
-                                </a>
-                                <a href="@Url.Action("ScheduleDiscussion", new { id = review.Id })" class="btn btn-info btn-sm">
-                                    <i class="fas fa-calendar"></i> Schedule Discussion
                                 </a>
                             </div>
                         </div>
