--- a/OKRPerformanceManagement.Web/Views/Admin/ManageOKRTemplates.cshtml
+++ b/OKRPerformanceManagement.Web/Views/Admin/ManageOKRTemplates.cshtml
@@ -1,3 +1,4 @@
+@model IEnumerable<OKRPerformanceManagement.Models.OKRTemplate>
 @{
     ViewData["Title"] = "Manage OKR Templates";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -82,9 +83,9 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                @if (ViewBag.OKRTemplates != null)
+                                @if (Model != null && Model.Any())
                                 {
-                                    @foreach (var template in ViewBag.OKRTemplates)
+                                    @foreach (var template in Model)
                                     {
                                         <tr>
                                             <td>@template.Name</td>
@@ -149,12 +150,17 @@
                         <label for="templateRole">Role</label>
                         <select class="form-control" id="templateRole" name="Role" required>
                             <option value="">Select Role</option>
-                            <option value="Administration">Administration</option>
-                            <option value="Support_Systems Engineer">Support Systems Engineer</option>
-                            <option value="Snr and Technical Team Leads">Senior and Technical Team Leads</option>
-                            <option value="Manager">Manager</option>
-                            <option value="Consultant">Consultant</option>
+                            @if (ViewBag.Roles != null)
+                            {
+                                @foreach (var role in ViewBag.Roles)
+                                {
+                                    <option value="@role.Name" data-role-id="@role.Id">@role.Name</option>
+                                }
+                            }
                         </select>
+                    </div>
+                    <div class="form-group">
+                        <input type="hidden" id="templateRoleId" name="RoleId" />
                     </div>
                     <div class="form-group">
                         <label for="templateDescription">Description</label>
@@ -174,6 +180,13 @@
     <script>
         $(document).ready(function() {
             console.log('Manage OKR Templates page loaded successfully');
+            
+            // Handle role selection change to set RoleId
+            $('#templateRole').change(function() {
+                var selectedOption = $(this).find('option:selected');
+                var roleId = selectedOption.data('role-id');
+                $('#templateRoleId').val(roleId);
+            });
         });
     </script>
 }
