--- a/OKRPerformanceManagement.Web/Views/Profile/ChangePassword.cshtml
+++ b/OKRPerformanceManagement.Web/Views/Profile/ChangePassword.cshtml
@@ -10,9 +10,7 @@
             <div class="d-flex justify-content-between align-items-center mb-4">
                 <h1 class="h3 mb-0 text-gray-800">Change Password</h1>
                 <div>
-                    <a href="@Url.Action("Index", "Admin")" class="btn btn-info me-2">
-                        <i class="fas fa-tachometer-alt"></i> Back to Admin Dashboard
-                    </a>
+                    @await Html.PartialAsync("_RoleBasedBackButton")
                     <a href="@Url.Action("ViewProfile")" class="btn btn-secondary">
                         <i class="fas fa-arrow-left"></i> Back to Profile
                     </a>
