--- a/OKRPerformanceManagement.Web/Views/Profile/PrivacySecurity.cshtml
+++ b/OKRPerformanceManagement.Web/Views/Profile/PrivacySecurity.cshtml
@@ -13,9 +13,7 @@
                     <a href="@Url.Action("ViewProfile")" class="btn btn-secondary me-2">
                         <i class="fas fa-arrow-left"></i> Back to Profile
                     </a>
-                    <a href="@Url.Action("Index", "Admin")" class="btn btn-info me-2">
-                        <i class="fas fa-tachometer-alt"></i> Back to Admin Dashboard
-                    </a>
+                    @await Html.PartialAsync("_RoleBasedBackButton")
                     <a href="@Url.Action("Settings")" class="btn btn-outline-primary me-2">
                         <i class="fas fa-cog"></i> General Settings
                     </a>
