--- a/OKRPerformanceManagement.Web/Views/Manager/Index.cshtml
+++ b/OKRPerformanceManagement.Web/Views/Manager/Index.cshtml
@@ -240,7 +240,7 @@
                                         </td>
                                         <td>@member.Position</td>
                                         <td>
-                                            <span class="badge badge-info">@member.Role</span>
+                                            <span class="badge bg-info text-white">@member.Role</span>
                                         </td>
                                         <td>
                                             <span class="badge badge-warning">In Progress</span>
