--- a/OKRPerformanceManagement.Web/Views/Account/Register.cshtml
+++ b/OKRPerformanceManagement.Web/Views/Account/Register.cshtml
@@ -59,13 +59,15 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group mb-3">
-                                <label asp-for="Role" class="form-label"></label>
+                                <label asp-for="Role" class="form-label">Role</label>
                                 <select asp-for="Role" class="form-control">
                                     <option value="">Select Role</option>
+                                    <option value="HR">HR</option>
+                                    <option value="Admin">Admin</option>
+                                    <option value="Manager">Manager</option>
                                     <option value="Administration">Administration</option>
                                     <option value="Support_Systems Engineer">Support/Systems Engineer</option>
                                     <option value="Snr and Technical Team Leads">Senior/Technical Team Leads</option>
-                                    <option value="Manager">Manager</option>
                                     <option value="Consultant">Consultant</option>
                                 </select>
                                 <span asp-validation-for="Role" class="text-danger"></span>
