--- a/OKRPerformanceManagement.Web/Views/Admin/EditEmployee.cshtml
+++ b/OKRPerformanceManagement.Web/Views/Admin/EditEmployee.cshtml
@@ -56,10 +56,12 @@
                                     <label asp-for="Role" class="form-label">Role *</label>
                                     <select asp-for="Role" class="form-control">
                                         <option value="">Select Role</option>
+                                        <option value="HR">HR</option>
+                                        <option value="Admin">Admin</option>
+                                        <option value="Manager">Manager</option>
                                         <option value="Administration">Administration or Junior Support Engineer</option>
                                         <option value="Support_Systems Engineer">Support/Systems Engineer</option>
                                         <option value="Snr and Technical Team Leads">Senior and Technical Team Leads</option>
-                                        <option value="Manager">Manager</option>
                                         <option value="Consultant">Consultant</option>
                                     </select>
                                     <span asp-validation-for="Role" class="text-danger"></span>
