--- a/OKRPerformanceManagement.Web/Views/Admin/Index.cshtml
+++ b/OKRPerformanceManagement.Web/Views/Admin/Index.cshtml
@@ -171,7 +171,7 @@
                                         <td>@employee.FirstName @employee.LastName</td>
                                         <td>@employee.Email</td>
                                         <td>
-                                            <span class="badge badge-info">@employee.Role</span>
+                                            <span class="badge bg-info text-white">@employee.Role</span>
                                         </td>
                                         <td>@employee.Position</td>
                                         <td>@(employee.Manager?.FirstName + " " + employee.Manager?.LastName ?? "N/A")</td>
